Added GETC for results and updated swagger documentation
