# src/Controller/ResultController.php
@@ -8,16 +8,36 @@
 
 namespace App\Controller;
 
-
+use App\Entity\Result;
+use App\Errors;
+use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
+use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\Routing\Annotation\Route;
+use Symfony\Component\HttpFoundation\Request;
+
 
 /**
  * Class ResultController
  * @package App\Controller
  * @Route(path=ResultController::RESULT_API_PATH, name="api_results_")
  */
-class ResultController
+class ResultController extends AbstractController
 {
     const RESULT_API_PATH = '/api/v1/results';
+
+    /**
+     * @return JsonResponse
+     * @Route(path="",name="getc",methods={Request::METHOD_GET})
+     */
+    public function getCResult():JsonResponse
+    {
+        /** @var Errors $error */
+        $error = new Errors();
+        $em = $this->getDoctrine()->getManager();
+        $results = $em->getRepository(Result::class)->findAll();
+        return ($results !== null)
+            ? new JsonResponse(['results' => $results])
+            : $error->error404();
+    }
 
 }
